Fix particles and breadcrumb issues on mobile
- Fixed canvas sizing of particles effect.
- Changed login card width.
- Changed particles effect to 'NASA' style.
- Fixed breadcrumb newline on mobile.

--- a/scss/pipeline.scss
+++ b/scss/pipeline.scss
@@ -70,10 +70,17 @@
 }
 
 .breadcrumb {
-  margin-bottom: unset;
-  margin-block-end: 0px;
+    display: block !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-bottom: unset;
+    margin-block-end: 0px;
 }
 
+.breadcrumb .breadcrumb-item {
+    display: inline;
+}
 
 .sidebar {
   text-align: center;
@@ -98,4 +105,11 @@
 	max-width: 400px;
 	min-width: 400px;
 	border-radius: 5px;
+}
+
+#particles-js {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: -100;
 }
